--- a/.settings/org.eclipse.jdt.ui.prefs
+++ b/.settings/org.eclipse.jdt.ui.prefs
@@ -1,3 +1,4 @@
-#Tue Oct 03 17:10:26 EEST 2006
+#Thu Oct 12 13:08:27 EEST 2006
 eclipse.preferences.version=1
+internal.default.compliance=default
 org.eclipse.jdt.ui.text.custom_code_templates=<?xml version\="1.0" encoding\="UTF-8"?><templates/>
