--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="EAssari/WEB-INF/lib/kxml2-min.jar"/>
 	<classpathentry kind="lib" path="EAssari/WEB-INF/lib/ojdbc14.jar"/>
 	<classpathentry kind="lib" path="EAssari/WEB-INF/lib/junit-4.1-src.jar"/>
+	<classpathentry sourcepath="ECLIPSE_HOME/plugins/org.eclipse.jdt.source_3.1.0/src/org.junit_3.8.1/junitsrc.zip" kind="var" path="JUNIT_HOME/junit.jar"/>
 	<classpathentry kind="output" path="EAssari/WEB-INF/classes"/>
 </classpath>
