--- a/EAssari/WEB-INF/web.xml
+++ b/EAssari/WEB-INF/web.xml
@@ -21,8 +21,12 @@
         <filter-name>TitoInitializer</filter-name>
         <filter-class>fi.helsinki.cs.kohahdus.TitoInitializer</filter-class>
 		<init-param>
+			<param-name>context-path</param-name>
+			<param-value>/home/tkt_koha/tomcat/webapps/morimoto/</param-value>
+		</init-param>
+		<init-param>
 			<param-name>language-properties</param-name>
-			<param-value>/home/tkt_koha/tomcat/webapps/morimoto/WEB-INF/xml/properties.xml</param-value>
+			<param-value>WEB-INF/xml/properties.xml</param-value>
 		</init-param>
     </filter>
      <filter-mapping>
