--- a/EAssari/WEB-INF/web.xml
+++ b/EAssari/WEB-INF/web.xml
@@ -14,11 +14,11 @@
         <filter-class>fi.helsinki.cs.kohahdus.TitoInitializer</filter-class>
 		<init-param>
 			<param-name>context-name</param-name>
-			<param-value>morimoto</param-value>
+			<param-value>tsoha</param-value>
 		</init-param>
 		<init-param>
 			<param-name>context-path</param-name>
-			<param-value>/home/tkt_koha/tomcat/webapps/morimoto/</param-value>
+			<param-value>/home/tkt_koha/tomcat/webapps/tsoha/</param-value>
 		</init-param>
 		<init-param>
 			<param-name>language-properties</param-name>
