--- a/EAssari/WEB-INF/web.xml
+++ b/EAssari/WEB-INF/web.xml
@@ -14,11 +14,11 @@
         <filter-class>fi.helsinki.cs.kohahdus.TitoInitializer</filter-class>
 		<init-param>
 			<param-name>context-name</param-name>
-			<param-value>tsoha</param-value>
+			<param-value>morimoto</param-value>
 		</init-param>
 		<init-param>
 			<param-name>context-path</param-name>
-			<param-value>/home/tkt_koha/tomcat/webapps/tsoha/</param-value>
+			<param-value>/home/tkt_koha/tomcat/webapps/morimoto/</param-value>
 		</init-param>
 		<init-param>
 			<param-name>language-properties</param-name>
@@ -35,6 +35,10 @@
 		<init-param>
 			<param-name>db-password</param-name>
 			<param-value>b1tt1</param-value>
+		</init-param>
+		<init-param>
+			<param-name>smtp-server</param-name>
+			<param-value>mail.cs.helsinki.fi</param-value>
 		</init-param>
     </filter>
     <filter-mapping>
