--- a/EAssari/WEB-INF/web.xml
+++ b/EAssari/WEB-INF/web.xml
@@ -38,7 +38,7 @@
 		</init-param>
 		<init-param>
 			<param-name>smtp-server</param-name>
-			<param-value>localhost</param-value>
+			<param-value>mail.cs.helsinki.fi</param-value>
 		</init-param>
 		<init-param>
 			<param-name>smtp-port</param-name>
