--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,7 @@
 	<classpathentry kind="lib" path="EAssari/WEB-INF/lib/mail.jar"/>
 	<classpathentry kind="lib" path="EAssari/WEB-INF/lib/commons-email-1.0.jar"/>
 	<classpathentry kind="lib" path="EAssari/WEB-INF/lib/activation.jar"/>
+	<classpathentry kind="lib" path="EAssari/WEB-INF/lib/commons-dbcp-1.2.1.jar"/>
+	<classpathentry kind="lib" path="EAssari/WEB-INF/lib/commons-pool-1.3.jar"/>
 	<classpathentry kind="output" path="EAssari/WEB-INF/classes"/>
 </classpath>
